--- a/slide/main.tex
+++ b/slide/main.tex
@@ -86,6 +86,8 @@
         \item Indirect network leads to feedback loops between the two sides of the market, thus increasing efficiencies and also potential market power
         \vspace{1em}
         \item Pricing is one of the key tools that platforms can manage to success
+        \vspace{1em}
+        \item \textcolor{red}{Seesaw effect} describes how pricing decisions on one side of a platform affect participation on the other side — like a seesaw: push down on one side, and the other goes up
     \end{itemize}
     \vspace{2em}
 
@@ -265,7 +267,7 @@
 
 \begin{frame}{Armstrong (2006): Price Distortions in Monopoly Pricing}
         \large
-        \textbf{Difference between profit-maximizing and efficient prices:}
+        \textbf{Difference between profit-maximizing and efficient prices(Tan and Wright, 2018):}
         
         \vspace{0.5em}
         
@@ -290,9 +292,9 @@
 \begin{frame}{Armstrong (2006): Extensions of Monopoly Pricing}
     \justifying  % Requires \usepackage{ragged2e} in the preamble
     \begin{itemize}
-        \item \textbf{Chicken \& Egg Problem} (Caillaud and Jullian, 2003): To overcome such pessimistic beliefs and successfully launch a platform, the platform must subsidize one side of the market through monetary ppayments or by offering additional services that raise the stand alone and make them positive to attract users.
+        \item \textbf{Chicken \& Egg Problem} (Caillaud and Jullian, 2003): To overcome such pessimistic beliefs and successfully launch a platform, the platform must subsidize one side of the market through monetary payments or by offering additional services that raise the stand alone values and make them positive to attract users.
         \vspace{1em}
-        \item \textbf{Vertical integration}: Offering conten in addition to matching services allows the platform to raise the value that buyers derive from joining and secure their participation(Haigu and Spulber, 2013; Miao, 2009; Decorniere and Taylor, 2014; Wen and Zhu, 2019; zhu and Liu, 2016)
+        \item \textbf{Vertical integration}: Offering content in addition to matching services allows the platform to raise the value that buyers derive from joining and secure their participation(Haigu and Spulber, 2013; Miao, 2009; Decorniere and Taylor, 2014; Wen and Zhu, 2019; Zhu and Liu, 2016)
         \vspace{1em}
         \item \textbf{Non-negative prices} (Amelio and Jullien, 2012): when the unconstrained monopoly price is negative, constraning the price to be non-negative has a detrimental effect not only on the platform but also on consumers        
     \end{itemize}
@@ -304,7 +306,8 @@
     \begin{itemize}
         \item \textbf{Distprtionary taxition and two-part tariffs}: taxation of usage has a distortionary effect and in this case the choice of transaction fees matters for efficiencies(Calvano, 2013)
         \vspace{1em}
-        \item \textbf{Dynamic pricing} (Cabral, 2019): The platform thus is treated as a durable good with two-sided network externalities and random obsolescence. Peitz et al. (2017) finds that a platform may benfit from lowering its prices at a nearly stage of development, relative to short-run profit maximization. In a dymic setting, the subsidy vanishes and prices become positive as the consumer base increases
+        \item \textbf{Dynamic pricing}: The platform thus is treated as a durable good with two-sided network externalities and random obsolescence. Cabral (2019) finds that  for a wide set of parameter values, platform size at time t  follows a bimodal distribution: Either the platform achieves a “large” size or remains at very “low” size.
+        Peitz et al. (2017) finds that provides an informational rationale for introductory pricing
         
     \end{itemize}
     
@@ -574,8 +577,7 @@
     \end{itemize}
     
     \vspace{0.5em}
-    \textit{This section focuses on markets with large interaction benefits. The low-benefit case is examined next}
-    
+  
 \end{frame}
 
 \begin{frame}{Armstrong (2006): Extension of Competition for the Market}
@@ -584,7 +586,7 @@
     \begin{itemize}
         \item \textbf{Divide-and-Conquer strategies}: Strategies that set prices below cost for some consumers compensated with prices above cost for other consumers (Caillaud and Jullien, 2001/2003; Jullien, 2011)
         \vspace{1em}
-        \item \textbf{Congestion within sides}: Network externalities withn sides may originate from congestion effects or competition between agents on the same sides (Belleflamme and Toulemonde, 2009), which may also prevent \textcolor{red}{tipping} (Halaburda et al., 2018)
+        \item \textbf{Congestion within sides}: Network externalities within sides may originate from congestion effects or competition between agents on the same sides (Belleflamme and Toulemonde, 2009), which may also prevent \textcolor{red}{tipping} (Halaburda et al., 2018)
         \vspace{1em}
         \item \textbf{Dynamic competition}: whether there is increasing dominance of the largest network eventually resulting in tipping? (Cabral, 2011; Halaburda et al., 2020; Biglaiser and Cremer, 2020))
     \end{itemize}
@@ -731,7 +733,7 @@
     \begin{itemize}
         \item \textbf{Multihoming on both sides}: Doganoglu and Wright (2006) incremental pricing principle
         \vspace{1em}
-        \item \textbf{Concentration and entry of platforms}: seesaw principle (Rochet and Tirole, 2006; Correia-da Silve et aal., 2019; Anderson and Peitz, 2020)
+        \item \textbf{Concentration and entry of platforms}: seesaw principle (Rochet and Tirole, 2006; Correia-da Silve et al., 2019; Anderson and Peitz, 2020)
         \vspace{1em}
         \item \textbf{Horizontal mergers}: Because of two-sidedness, a merger may not lead to higher prices and lower consumer surplus on both sides (Chandra and Collard Wexler, 2009; Tan and Zhou, 2020; Leonello, 2010)
         \vspace{1em}
@@ -752,7 +754,7 @@
             outcomes, showing how network effects influence price levels.
       \item Platform Competition: Discussed how modeling “competition for the market” versus 
             “competition on the market” must account for single‐homing or multi‐homing. 
-            Also emphasized matching design and within‐side price discrimination.
+            
     \end{itemize}
 \end{frame}
 
