--- a/slide/main.tex
+++ b/slide/main.tex
@@ -602,7 +602,7 @@
             \item One group cares about the number of agents in the other group but not itself
             \item Interaction benefits are different across groups but same across platforms: $\alpha_{1}^{i} = \alpha_{2}^{i}, \alpha_{1}^{j} = \alpha_{2}^{j}$
             \item The platform can charge a per-agent fee to each group of agents
-            \item Each agent chooses to join a single platfom [\textcolor{red}{single-homing}]
+            \item Agent 1 chooses to join a single platfom [\textcolor{red}{single-homing}];Agent 2 can join two platfoms [\textcolor{red}{multi-homing}]
         \end{enumerate}
     \end{block}
 \end{frame}
